<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity_layout"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashScreenActivity"
    android:orientation="vertical">
    <!-- start header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.2"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageLogo"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/splash_font_size"
            android:id="@+id/textViewTitle"
            android:textAlignment="center"
            android:textColor="@color/splashTextColor"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="1"
            android:shadowColor="@color/splashTextShadowColor"
            />

    </LinearLayout>
    <!-- stop header-->
    <!-- start body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <ProgressBar
            android:id="@+id/loginProgresBar"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:progressTint="@color/splashTextColor" />
        <TextView
            android:layout_width="match_parent"
            android:text="@string/string_null"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUserID"
            android:hint="@string/user_id"
            android:textColorHint="@color/hintColorName"
            android:layout_weight="0.1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword"
            android:hint="@string/string_password"
            android:textColorHint="@color/hintColorName"
            android:layout_weight="0.1"/>
        <TextView
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_null"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_login"
            android:id="@+id/buttonLogin"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_reset"
            android:id="@+id/buttonReset"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <!-- stop body-->
    <!-- start footer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.2">
    </LinearLayout>

    <!-- stop footer-->
</LinearLayout>